últimos ajustes na janela de login
adicionei icon de fechar no canto superior

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         <button type="button" class="btn-trailer">Assista ao Trailer</button>
         </div>
         <img src="img/poster.png" alt="poster back from the brink" class="poster-lateral">
+
         <div class="container">
+            
+            <span class="icone-fechar">
+                <ion-icon name="close"></ion-icon>
+            </span>
+
             <div class="form-box login">
                 <h2>Login</h2>
                 <form action="#">
