Alterações de medidas e Javascript adicionado
Funçôes javascript para abrir e fechar a janela de login adicionadas. ajuste nas medidas do poster lateral

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="cabecalho">
         <nav>
             <a href="#">Onde assistir</a>
-            <button type="button" class="btn-login">Log In</button>
+            <button type="button" class="btn-login" id="btnLogin">Log In</button>
         </nav>
     </header>
 
@@ -29,8 +29,8 @@
         <img src="img/poster.png" alt="poster back from the brink" class="poster-lateral">
 
         <div class="container">
-            
-            <span class="icone-fechar">
+
+            <span class="icone-fechar" id="fecharJanela">
                 <ion-icon name="close"></ion-icon>
             </span>
 
@@ -44,7 +44,7 @@
                         </div>
                         <div class="input-box">
                             
-                            <input type="senha" required>
+                            <input type="password" required>
                             <label>Senha</label>
                     </div>
                     <div class="relembrar">
